--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <h2>Top Trended songs in English</h2>
                 <p>Hit play to vibe or download to keep it forever.</p>
                 <ol>
-                    <li>Friends -ann marie<br><audio controls src="marshmello-friends.mp3"></audio><a href="rock*audio-english/marshmello-friends.mp3" download="friends.mp3">⬇️Download</a></li>
+                    <li>Friends -ann marie<br><audio controls src="marshmello-friends.mp3"></audio><a href="marshmello-friends.mp3" download="friends.mp3"><button>⬇️Download</button></a></li>
                 </ol>
             </article>
         </section>
