--- a/index.html
+++ b/index.html
@@ -43,11 +43,17 @@
                     <li>Friends -ann marie<br><audio controls src="marshmello-friends.mp3"></audio><a href="marshmello-friends.mp3" download="friends.mp3"><button>⬇️Download</button></a></li>
                     <li>Bumble Bee -bambee<br><audio controls src="Bumble bee.mp3"></audio><a href="Bumble bee.mp3" download="Bumble bee.mp3"><button>⬇️Download</button></a></li>
                 </ol>
-                <h2>Tamil Songs</h2>
-                <p>Click and play or download</p>
-                <ul>
-                     <li>Ella Pugazhum<br><audio controls src="Ella-Pugazhum.mp3"></audio><a href="Ella-Pugazhum.mp3" download="Benston fucker.mp3"><button>⬇️Download</button></a></li>
-                </ul>
+                <aside>
+                    <details>
+                        <summary><h2>Tamil Songs</h2></summary>
+                        <p>Click and play or download</p>
+                    <p>
+                          <ul>
+                             <li>Ella Pugazhum<br><audio controls src="Ella-Pugazhum.mp3"></audio><a href="Ella-Pugazhum.mp3" download="Benston fucker.mp3"><button>⬇️Download</button></a></li>
+                          </ul>
+                    </p>
+                    </details>
+                </aside>
             </article>
         </section>
     </main>
