--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Hi-res</title>
 </head>
 
-<body background="rock*images-snap/5825746.jpg">
+<body background="54678.jpg">
     <header>
         <h1>🎵Your Music Your Rules</h1>
         <p>
@@ -43,17 +43,15 @@
                     <li>Friends -ann marie<br><audio controls src="marshmello-friends.mp3"></audio><a href="marshmello-friends.mp3" download="friends.mp3"><button>⬇️Download</button></a></li>
                     <li>Bumble Bee -bambee<br><audio controls src="Bumble bee.mp3"></audio><a href="Bumble bee.mp3" download="Bumble bee.mp3"><button>⬇️Download</button></a></li>
                 </ol>
-                <aside>
-                    <details>
-                        <summary><h2>Tamil Songs</h2></summary>
-                        <p>Click and play or download</p>
-                    <p>
-                          <ul>
-                             <li>Ella Pugazhum<br><audio controls src="Ella-Pugazhum.mp3"></audio><a href="Ella-Pugazhum.mp3" download="Benston fucker.mp3"><button>⬇️Download</button></a></li>
-                          </ul>
-                    </p>
-                    </details>
-                </aside>
+            </article>
+            <article id="Tamil">
+                <h2>Tamil Songs</h2>
+                <p>Click and play or download</p>
+                <p>
+                    <ol>
+                        <li>Ella Pugazhum<br><audio controls src="Ella-Pugazhum.mp3"></audio><a href="Ella-Pugazhum.mp3" download="Ella Pugazhum.mp3"><button>⬇️Download</button></a></li>
+                    </ol>
+                </p>
             </article>
         </section>
     </main>
