--- a/index.html
+++ b/index.html
@@ -56,5 +56,9 @@
             </article>
         </section>
     </main>
+    <hr>
+    <footer>
+        &copy 2025 FreeMusic. All rights reserved.
+    </footer>
 </body>
 </html>
